--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,5 +5,18 @@ updates:
     schedule:
       interval: "daily"
     labels:
-      - "dependencies"
-      - "automerge"
+      - "dependabot"
+    groups:
+      dependencies:
+        patterns:
+          - "*"
+  - package-ecosystem: nuget
+    directory: "/"
+    schedule:
+      interval: "daily"
+    labels:
+      - "dependabot"
+    groups:
+      dependencies:
+        patterns:
+          - "*"
