--- a/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
+++ b/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
@@ -32,6 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia.Controls.DataGrid" />
+    <PackageReference Include="Avalonia.Controls.ItemsRepeater" />
     <PackageReference Include="Avalonia.Desktop" />
     <PackageReference Include="Avalonia.Diagnostics" />
     <PackageReference Include="Avalonia.Skia" />
@@ -41,12 +43,13 @@
     <PackageReference Include="Avalonia.Xaml.Interactivity" />
     <PackageReference Include="Avalonia" />
     <PackageReference Include="CommandLineParser" />
-    <PackageReference Include="Deadpikle.AvaloniaProgressRing" />
+    <PackageReference Include="FluentAvaloniaUI" />
     <PackageReference Include="Generator.Equals" />
-    <PackageReference Include="GitInfo" />
-    <PackageReference Include="Material.Avalonia" />
+    <PackageReference Include="GitInfo">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-    <PackageReference Include="NLog.Config" />
     <PackageReference Include="NLog" />
     <PackageReference Include="ReactiveProperty" />
     <PackageReference Include="YamlDotNet" />
