--- a/src/Omnius.Lxna.Ui.Desktop/Properties/launchSettings.json
+++ b/src/Omnius.Lxna.Ui.Desktop/Properties/launchSettings.json
@@ -3,7 +3,7 @@
         "Omnius.Lxna.Ui.Desktop": {
             "commandLineArgs": "\"-s\" \"./storage\" \"-v\" \"true\"",
             "commandName": "Project",
-            "workingDirectory": "../../demo"
+            "workingDirectory": "../../tmp"
         }
     }
 }
