--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,14 @@
     "cSpell.words": [
         "Avalonia",
         "Bootstrapper",
+        "ciphertext",
+        "Decrypter",
+        "Encrypter",
         "lxna",
         "Magick",
-        "Omnius"
-    ],
-    "rust-analyzer.checkOnSave" : false,
+        "Newtonsoft",
+        "Omni",
+        "Omnius",
+        "Remoting"
+    ]
 }
